# quake-movement-gdext

./: .gitignore  Cargo.toml  Makefile  README.md
docs/plans/: 2026-03-29-architecture-fixes.md
src/: camera.rs  jump.rs  lib.rs  movement.rs  quake_controller.rs  quake_physics.rs  util.rs
